[package]
name = "rewrk-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
hyper = { version = "1", features = ["client", "server", "http1"] }
num_cpus = "1"
ratatui = "0.26"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "parking_lot", "time"] }
