[package]
name = "rewrk-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
num_cpus = "1"
parking_lot = "0.12"
pin-project = "1"
ratatui = "0.26"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "parking_lot", "time", "net"] }
url = "2"
